Do not add return type to constructors in signature assistant.

BUG: 355356